--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "cra-template-pwa-typescript": "2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.8",
-    "@types/styled-components": "^5.1.26"
+    "styled-components": "^6.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
