--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.0.11",
-    "react-router-dom": "^6.22.3",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.14"
   },
@@ -49,6 +49,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
