--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "uuid": "^11.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
